<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.undertheweather.MainActivity$PlaceholderFragment" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" >

        <ImageButton
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/colorTransparent"
            android:contentDescription=""
            android:src="@android:drawable/ic_popup_sync"
            tools:ignore="ContentDescription,NotSibling,RtlHardcoded" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:background="@drawable/shapes" >

        <TextView
            android:id="@+id/current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/current_date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorFont"
             />

        <TextView
            android:id="@+id/weather_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_date"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/weather_sunny"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorFont"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/current_weather_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather_condition"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/current_weather_high"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorFont"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/current_weather_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/current_weather_high"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/current_weather_low"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorFont"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_weather_low"
            android:layout_marginTop="5dp"
            android:text="@string/current_location"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorFont" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:background="@drawable/shapes" >

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/forecast_wed"
            android:layout_below="@+id/condtion"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorFont" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/pressure"
            android:layout_alignBottom="@+id/pressure"
            android:layout_alignParentRight="true"
            android:layout_marginRight="23dp"
            android:text="@string/forecast_tue"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorFont" />

        <TextView
            android:id="@+id/condtion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/forecast_mon"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorFont" />

    </RelativeLayout>

</RelativeLayout>